# operating_system-solaris

./: .gitignore  Build.txt  build.h  raspbian.txt  stl_prefix.h  stm8update.txt  tbs
_seed/: __hello.workspace  app.workspace  arcade.workspace  audio.workspace  basic.workspace  core_hellomultiverse.workspace  core_solutions.workspace  form.workspace  foundation.workspace  lab.workspace  multimedia.workspace  netnodelite (copy).workspace  netnodelite.workspace  simple.workspace  store.workspace  third.workspace  veribase64.workspace
_seed/mnt_ubuntu1/: all32.workspace  netnodelite.workspace  rootkiller.workspace
_seed/paraseed/: all.workspace  all_small.workspace  arcade.workspace  audio.workspace  aura.workspace  backup_all.workspace  basic.workspace  core_games.workspace  core_solutions.workspace  core_solutions1.workspace  foundation.workspace  multimedia.workspace  simple.workspace  simple_application.workspace  textformat.workspace  third.workspace  veriwell_waven.workspace
_seed/vs/: __helloworld.sln
aaa_want_to_remove_include/: pc.txt  platform_setup.h  third_private_config.h
aaa_want_to_remove_include/valgrind/: libvex.h  libvex_guest_amd64.h  libvex_guest_ppc64.h  pub_tool_basics_asm.h  pub_tool_libcfile.h  pub_tool_options.h  pub_tool_redir.h  pub_tool_tooliface.h  valgrind.h
acme_solaris/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _references.txt  aaa_acme_solaris.h  aaaa_acme_solaris.h  acme_directory.cpp  acme_directory.h  acme_file.cpp  acme_file.h  acme_path.cpp  acme_path.h  calculate_edesktop.cpp.1  dir_context.cpp  dir_context.h  dir_system.cpp  dir_system.h  file.cpp.1  file.h.1  file_context.cpp  file_context.h  file_system.cpp  file_system.h  framework.h  node.cpp  node.h
apex_solaris/: CMakeLists.txt  _.cpp  _.h  _apex_windows.vcxproj  _apex_windows_vs12.vcxproj  _factory.cpp  _references.txt  a.h  aaa_apex_solaris.h  aaa_application.cpp  aaa_crypto.cpp  aaa_crypto.h  aaa_factory_exchange1.cpp  aaa_interprocess_communication.cpp  aaa_interprocess_communication.h  aaa_node_windows.h  aaa_os_context.cpp  aaa_os_context.h  aaa_thread.cpp  aaa_timer.cpp  aaa_trace.cpp  aaa_want_to_remove_handle.cpp  aaa_want_to_remove_handle.h  aaa_want_to_remove_printer.cpp  aaa_want_to_remove_printer.h  aaa_want_to_remove_shell1.cpp  aaa_want_to_remove_simple_hold_handle.h  aaa_windows.h  apex_windows.def  apex_windows.vcxproj  apex_windows.vcxproj.filters  framework.h  ip_enum.cpp  ip_enum.h  launcher.cpp  launcher.h  node.cpp  node.h  process_data.h  service_handler.cpp  (+4 more)
apex_solaris/explorer/: explorer_restart.cpp  install_desk_toolbar.cpp
apex_solaris/kqueue/: file_watcher.cpp  file_watcher.h
app/: app.cbp  app.cpp  app.sln  app.vcxproj  app.vcxproj.filters  clang_app.cbp  framework.h
app.axis/: app.axis.cbp  app.axis.cpp  framework.h
audio_alsa/: _.h  _factory.cpp  audio_alsa.cbp  audio_mmsystem_wave_in.h  snd_pcm.cpp  snd_pcm.h  translation.cpp  translation.h  wave_in.cpp  wave_in.h  wave_out.cpp  wave_out.h
audio_mixer_alsa/: audio_mixer_mmsystem.def  audio_mixer_mmsystem.h  audio_mixer_mmsystem.vcxproj  audio_mixer_mmsystem.vcxproj.filters  audio_mixer_mmsystem__factory.cpp  audio_mixer_mmsystem_aaa_factory_exchange.h
aura_solaris/: CMakeLists.txt  _.h  _aura_windows.vcxproj  _aura_windows.vcxproj.filters  _aura_windows_vs12.vcxproj  _aura_windows_vs12.vcxproj.filters  _factory.cpp  _references.txt  aaa_aura_solaris.h  aaa_bitmap.cpp  aaa_graphics.cpp  aaa_object.cpp  aaa_pen.cpp  appindicator.cpp  appindicator.h  aura_windows.vcxproj  aura_windows.vcxproj.filters  framework.h  interaction_impl.cpp  interaction_impl.h  node.cpp  node.h
aura_solaris/aaa_explorer/: install_desk_toolbar.cpp
configuration/common/: config.h
configuration/id3lib/: config.h
configuration/unac/: config.h
desktop_environment_gnome/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _references.txt  aaa_desktop_environment_gnome.h  aaa_gdk.cpp  aaa_gdk.h  appindicator.h  application.cpp  copydesk.cpp  display.h  framework.h  gnome_direct.cpp  gnome_gnome.h  monitor.h  node.cpp  node.h  notify_icon.cpp  notify_icon.h  user.h  windowing.h
desktop_environment_gnome/aura/: gnome.h  gnome_direct.cpp
desktop_environment_kde/: CMakeLists.txt  _.h  _desktop_environment_kde.h  _factory.cpp  appindicator.h  application.cpp  copydesk.cpp  copydesk.h  framework.h  gdk.cpp  gdk.h  gnome_direct.cpp  gnome_gnome.h  node.cpp  node.h
desktop_environment_kde/aura/: gnome.cpp  gnome_direct.cpp  gnome_gnome.h
desktop_environment_xfce/: CMakeLists.txt  _.h  _desktop_environment_xfce.h  _factory.cpp  appindicator.cpp  appindicator.h  application.cpp  copydesk.cpp  display.h  framework.h  gdk.cpp  gdk.h  monitor.cpp  monitor.h  node.cpp  node.h  node_xfce.cbp  notify_icon.cpp  notify_icon.h  user.h  windowing.cpp  windowing.h  xfce_direct.cpp
desktop_environment_xfce/aura/: xfce.h  xfce_direct.cpp  xfce_xfce.h
include/configuration/: config.h
installer/libspotify-12.1.51-Linux-x86_64-release/: ChangeLog
music_midi_alsa/: _.h  aaa_want_to_remove_music_midi_alsa_file.cpp  aaa_want_to_remove_music_midi_alsa_sequence.cpp  aaa_want_to_remove_music_midi_alsa_sequence.h  aaa_want_to_remove_music_midi_alsa_sequence_thread.cpp  framework.h  message_out.cpp  message_out.h  music_midi_alsa.cbp  music_midi_alsa.cpp  music_midi_alsa__factory.cpp  music_midi_alsa_file.h  music_midi_alsa_midi.cpp  music_midi_alsa_midi.h  music_midi_alsa_out.cpp  music_midi_alsa_out.h  music_midi_alsa_translation.h
music_midi_alsa/player/: music_midi_alsa_player.cpp  music_midi_alsa_player.h
node_solaris/: CMakeLists.txt  _.h  _const.h  _factory.cpp  _node_linux.h  _references.txt  aaa_node.cpp  aaa_node.h  aaa_node_solaris.h  framework.h  graphics.cpp
operating_system/: _config.h  aaa_want_to_remove_version.h  appconfig.h  bit.h  configuration.h  nodeapp_setup.h  operating_system.h  platform_setup.h  system.h  third_private_c.h  types.h  x265.h
operating_system/valgrind/: config.h  drd.h  (+11 more)
os2/: aaa_factory_exchange.h  lnx2__factory.cpp  os2.cbp  os2.h
sample/: x.cbp
stage/: prepare_framework_h.sh
(+38 files in other folders)
